--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -70,7 +70,7 @@ steps:
       docker:
         image: ruby:3.4
 
-- label: chefstyle-tests-ruby-3.1
+- label: cookstyle-chefstyle-tests-ruby-3.1
   command:
     - .expeditor/run_linux_tests.sh "rake style:chefstyle"
   expeditor:
@@ -78,7 +78,7 @@ steps:
       docker:
         image: ruby:3.1
 
-- label: chefstyle-tests-ruby-3.4
+- label: cookstyle-chefstyle-tests-ruby-3.4
   command:
     - .expeditor/run_linux_tests.sh "rake style:chefstyle"
   expeditor:
