--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,18 +1,28 @@
 ---
 require:
-  - chefstyle
+  - cookstyle
 
 AllCops:
   TargetRubyVersion: 3.1
   Include:
-      - "**/*.rb"
+    - "**/*.rb"
   Exclude:
-      - "vendor/**/*"
-      - "spec/**/*"
+    - "vendor/**/*"
+    - "spec/**/*"
+    - "lib/chef-cli/skeletons/code_generator"
+    - "spec/unit/fixtures/chef-runner-cookbooks"
+    - "spec/unit/fixtures/cookbook_cache"
+    - "spec/unit/fixtures/example_cookbook"
+    - "spec/unit/fixtures/example_cookbook_metadata_json_only"
+    - "spec/unit/fixtures/example_cookbook_no_metadata"
+    - "spec/unit/fixtures/local_path_cookbooks"
+
+# Disable string literal style check to reduce changes when migrating from chefstyle
 Style/StringLiterals:
-  Exclude:
-    - "spec/unit/fixtures/**/*"
-    - "lib/chef-cli/skeletons/**/*"
+  Enabled: false
+
+Style/StringLiteralsInInterpolation:
+  Enabled: false
 Layout/TrailingWhitespace:
   Exclude:
     - "spec/unit/fixtures/**/*"
